--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,17 @@
 
 .active {
   background-color: white;
-  color: #141e28;
+  color: #16181d;
+}
+.-animate-spin {
+  animation: -spin 1s linear infinite;
+}
+
+@keyframes -spin {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
