animation to hero image

--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,15 @@
   background-color: white;
   color: #16181d;
 }
-.-animate-spin {
-  animation: -spin 1s linear infinite;
+.animate-reverse-spin {
+  animation: reverse-spin 1s linear infinite;
 }
 
-@keyframes -spin {
+@keyframes reverse-spin {
   from {
-    transform: rotate(360deg);
+    transform: rotate(0deg);
   }
   to {
-    transform: rotate(0deg);
+    transform: rotate(-360deg);
   }
 }
