--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,10 @@
     @apply font-semibold text-base py-2 px-4 text-center bg-white/5 w-full rounded-t-md mb-2.5;
   }
   .social-link-item {
-    @apply p-2.5 md:p-4 bg-white rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-105 active:opacity-90 transition md:duration-200 ease-in;
+    @apply p-2.5 md:p-4 bg-white rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-100 transition md:duration-200 ease-in;
   }
   .social-link-ig-addon {
-    @apply hover:bg-gradient-to-tr text-[#fd1d1d] from-[#f56040] via-[#fd1d1d] via-80% to-[#c13584];
+    @apply hover:bg-gradient-to-tr text-[#fd1d1d] from-[#f56040] via-[#fd1d1d] via-80% to-[#c13584] active:from-[#f56040]/85 active:via-[#fd1d1d]/85 active:to-[#c13584]/85;
   }
   .programming-lang-card {
     @apply cursor-pointer p-2 md:p-4 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] font-semibold text-white flex flex-col gap-1 md:gap-2 items-center justify-center;
@@ -51,7 +51,9 @@
   .feedback-tab-btn {
     @apply py-1 md:py-[0.3rem] px-4 font-semibold rounded bg-white/5 text-[#fdfdff] hover:bg-[#16181d] border-[1.5px] active:scale-95 border-[#fdfdff] active:bg-white/5 transition ease-in md:duration-200;
   }
-
+  .feedback-tab-input {
+    @apply py-1.5 px-2 text-[#16181d] focus:outline-sky-500 invalid:focus:outline-sky-500 valid:focus:outline-green-500 out-of-range:border-red-500 outline-1 rounded;
+  }
   .animate-reverse-spin {
     animation: reverse-spin 1s linear infinite;
   }
