--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
     @apply font-semibold text-base py-[0.3rem] px-4 text-center bg-white/5 text-[#fdfdff]/95 hover:bg-[#16181d]/95 active:bg-white/5 active:scale-95 border-x-[1.5px] border-b-[1.5px] border-current shadow w-fit rounded-b-md mb-2.5 transition;
   }
   .feedback-tab-btn {
-    @apply py-1 md:py-[0.3rem] px-4 font-semibold rounded bg-white/5 text-[#fdfdff] hover:bg-[#16181d] border-[1.5px] active:scale-95 border-[#fdfdff] active:bg-white/5 disabled:opacity-25 transition ease-in md:duration-200;
+    @apply py-1 md:py-[0.3rem] px-4 font-semibold rounded bg-white/5 text-[#fdfdff] hover:bg-[#16181d] border-[1.5px] active:scale-95 border-[#fdfdff] active:bg-white/5 disabled:opacity-75 min-w-[50%] transition ease-in md:duration-200;
   }
   .feedback-tab-input {
     @apply py-1.5 px-2 text-[#16181d] focus:outline-sky-500 invalid:focus:outline-sky-500 valid:focus:outline-green-500 out-of-range:focus:outline-red-500 rounded;
