--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     @apply px-4 rounded py-0.5 font-semibold bg-white/[0.035] hover:bg-[#f0f0f2] hover:text-[#16181d] active:text-[#16181d] active:bg-[#f0f0f2]/75 text-[#f0f0f2] transition overflow-hidden;
   }
   header {
-    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#16181d];
+    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#000000]/90;
   }
   nav {
     @apply px-2 pt-1.5 md:px-2.5 md:pt-1 flex items-center justify-between max-w-7xl w-full text-white;
