--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,9 @@
   .about-details-card h3 {
     @apply font-semibold text-lg py-2 px-4 text-center bg-white/5 w-full rounded-b-md mb-2.5;
   }
+  .about-details-card ul {
+    @apply w-full list-disc px-2 md:px-4 text-justify text-white/75 drop-shadow shadow-black flex flex-col gap-y-1;
+  }
   .about-details-card ul li {
     @apply transition duration-150 md:duration-200 ease-in hover:text-white;
   }
@@ -55,6 +58,9 @@
     @apply cursor-pointer p-2 md:p-4 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] font-semibold text-white flex flex-col gap-1 md:gap-2 items-center justify-center;
   }
   .about-details-card {
+    @apply cursor-pointer p-4 md:pt-0 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-white flex flex-col gap-2 items-center justify-center;
+  }
+  .projects-card {
     @apply cursor-pointer p-4 md:pt-0 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-white flex flex-col gap-2 items-center justify-center;
   }
   .back-to-top-btn {
