--- a/src/index.css
+++ b/src/index.css
@@ -58,10 +58,25 @@
     @apply cursor-pointer p-2 md:p-4 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] font-semibold text-white flex flex-col gap-1 md:gap-2 items-center justify-center;
   }
   .about-details-card {
-    @apply cursor-pointer p-4 md:pt-0 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-white flex flex-col gap-2 items-center justify-center;
+    @apply cursor-pointer p-4 md:pt-0 bg-gradient-to-tl hover:bg-gradient-to-br rounded-md from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-white flex flex-col gap-1 items-center justify-center;
   }
   .projects-card {
-    @apply cursor-pointer p-4 md:pt-0 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-white flex flex-col gap-2 items-center justify-center;
+    @apply cursor-pointer w-64 relative flex-col items-center justify-center overflow-hidden rounded-xl shadow-inner shadow-black;
+  }
+  .projects-card h3 {
+    @apply text-lg flex flex-row items-center justify-between gap-1.5 w-full bg-black bottom-0 left-0 py-1.5 pl-2 pr-1 text-white text-start font-semibold truncate;
+  }
+  .projects-card h3 span {
+    @apply flex flex-row items-center justify-center gap-1 w-fit text-xs font-semibold text-center rounded-bl drop-shadow;
+  }
+  .projects-card h3 span a {
+    @apply p-0.5 text-white rounded-full text-2xl aspect-square hover:scale-110 active:opacity-75 transition md:duration-200 ease-in;
+  }
+  .projects-card p {
+    @apply absolute opacity-100 bottom-0 md:opacity-0 transition ease-in duration-150 md:duration-200 pt-1 pb-2 px-2 w-fit font-normal text-xs bg-black/65 text-white drop-shadow text-justify;
+  }
+  .projects-card img {
+    @apply aspect-square w-64 h-64 border-2 border-black bg-white rounded-b-xl select-none;
   }
   .back-to-top-btn {
     @apply font-semibold text-base py-[0.3rem] px-4 text-center bg-white/5 text-[#fdfdff]/95 hover:bg-[#16181d]/95 active:bg-white/5 active:scale-95 border-[1.5px] border-current shadow w-fit rounded-md transition;
