chore: add transition to image loader and img

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
     @apply w-full list-disc px-2 md:px-4 text-justify text-white/75 drop-shadow shadow-black flex flex-col gap-y-1;
   }
   .about-details-card ul li {
-    @apply transition duration-150 md:duration-200 ease-in hover:text-white;
+    @apply transition md:duration-200 ease-in hover:text-white;
   }
   .social-link-item {
     @apply p-2.5 md:p-4 bg-white rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-100 transition md:duration-200 ease-in;
@@ -73,7 +73,7 @@
     @apply p-0.5 text-white rounded-full text-2xl aspect-square hover:scale-110 active:opacity-75 transition md:duration-200 ease-in;
   }
   .projects-card p {
-    @apply absolute opacity-100 bottom-0 md:opacity-0 transition ease-in duration-150 md:duration-200 pt-1 pb-2 px-2 w-fit font-normal text-xs bg-black/65 text-white drop-shadow text-justify;
+    @apply absolute opacity-100 bottom-0 md:opacity-0 transition ease-in md:duration-200 pt-1 pb-2 px-2 w-fit font-normal text-xs bg-black/65 text-white drop-shadow text-justify;
   }
   .projects-card img {
     @apply aspect-square w-64 h-64 border-2 border-black bg-white rounded-b-xl select-none;
