--- a/src/index.css
+++ b/src/index.css
@@ -4,31 +4,31 @@
 
 @layer components {
   .nav-link-n {
-    @apply px-3 pt-1.5 pb-0.5 md:px-3 md:pt-2.5 md:pb-2 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-white/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-white/85 active:text-[#16181d] hover:bg-white hover:text-[#16181d] select-none;
+    @apply px-3 pt-1.5 pb-0.5 md:px-3 md:pt-2.5 md:pb-2 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] hover:bg-[#f5f5f5] hover:text-[#16181d] select-none;
   }
   .nav-link-w {
-    @apply px-1.5 pt-1.5 pb-0.5 md:px-2 md:pt-2.5 md:pb-2 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-white/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-white/85 active:text-[#16181d] hover:bg-white hover:text-[#16181d] select-none;
+    @apply px-1.5 pt-1.5 pb-0.5 md:px-2 md:pt-2.5 md:pb-2 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] hover:bg-[#f5f5f5] hover:text-[#16181d] select-none;
   }
   .nav-link-span {
     @apply text-xs md:text-base;
   }
   .header-promo-close-btn {
-    @apply px-4 rounded py-0.5 font-semibold bg-white/[0.035] hover:bg-[#f0f0f2] hover:text-[#16181d] active:text-[#16181d] active:bg-[#f0f0f2]/75 text-[#f0f0f2] transition-all overflow-hidden;
+    @apply px-4 rounded py-0.5 font-semibold bg-[#f5f5f5]/[0.035] hover:bg-[#f0f0f2] hover:text-[#16181d] active:text-[#16181d] active:bg-[#f0f0f2]/75 text-[#f0f0f2] transition-all overflow-hidden;
   }
   header {
     @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111];
   }
   nav {
-    @apply px-2 pt-1.5 md:px-2.5 md:pt-1 flex items-center justify-between max-w-7xl w-full text-white;
+    @apply px-2 pt-1.5 md:px-2.5 md:pt-1 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5];
   }
   .nav-link-icon {
     @apply text-2xl md:text-[1.35rem];
   }
   .footer-links-panel-item {
-    @apply border-b-[1.5px] border-transparent hover:border-white w-fit transition-all md:duration-200 ease-in;
+    @apply border-b-[1.5px] border-transparent hover:border-[#f5f5f5] w-fit transition-all md:duration-200 ease-in;
   }
   .footer-panel-h2 {
-    @apply font-semibold text-base py-2 px-4 text-center bg-white/5 rounded-b-md;
+    @apply font-semibold text-base py-2 px-4 text-center bg-[#f5f5f5]/5 rounded-b-md;
   }
   .footer-link-card {
     @apply flex flex-col items-start justify-center bg-gradient-to-br hover:bg-gradient-to-tl from-[#16181d] from-85% to-[#646674]/50 hover:to-[#646674] text-[#fdfdff] rounded-md w-full;
@@ -37,52 +37,52 @@
     @apply p-2 md:px-4 flex flex-col gap-0.5;
   }
   .footer-card-h3 {
-    @apply font-semibold text-base py-2 px-4 text-center bg-white/5 w-full rounded-t-md mb-2.5;
+    @apply font-semibold text-base py-2 px-4 text-center bg-[#f5f5f5]/5 w-full rounded-t-md mb-2.5;
   }
   .about-details-card h3 {
-    @apply font-semibold text-lg py-2 px-4 text-center bg-white/5 w-full rounded-b-md mb-2.5;
+    @apply font-semibold text-lg py-2 px-4 text-center bg-[#f5f5f5]/5 w-full rounded-b-md mb-2.5;
   }
   .about-details-card ul {
-    @apply w-full list-disc px-2 md:px-4 text-justify text-white/75 drop-shadow shadow-[#111111] flex flex-col gap-y-1;
+    @apply w-full list-disc px-2 md:px-4 text-justify text-[#f5f5f5]/75 drop-shadow shadow-[#111111] flex flex-col gap-y-1;
   }
   .about-details-card ul li {
-    @apply transition-all md:duration-200 ease-in hover:text-white;
+    @apply transition-all md:duration-200 ease-in hover:text-[#f5f5f5];
   }
   .social-link-item {
-    @apply p-2.5 md:p-4 bg-white rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-100 transition-all md:duration-200 ease-in;
+    @apply p-2.5 md:p-4 bg-[#f5f5f5] rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-100 transition-all md:duration-200 ease-in;
   }
   .social-link-ig-addon {
     @apply hover:bg-gradient-to-tr text-[#fd1d1d] from-[#f56040] via-[#fd1d1d] via-80% to-[#c13584] active:from-[#f56040]/85 active:via-[#fd1d1d]/85 active:to-[#c13584]/85;
   }
   .programming-lang-card {
-    @apply cursor-pointer p-2 md:p-4 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] font-semibold text-white flex flex-col gap-1 md:gap-2 items-center justify-center;
+    @apply cursor-pointer p-2 md:p-4 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] font-semibold text-[#f5f5f5] flex flex-col gap-1 md:gap-2 items-center justify-center;
   }
   .about-details-card {
-    @apply cursor-pointer p-4 md:pt-0 bg-gradient-to-tl hover:bg-gradient-to-br rounded-md from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-white flex flex-col gap-1 items-center justify-center;
+    @apply cursor-pointer p-4 md:pt-0 bg-gradient-to-tl hover:bg-gradient-to-br rounded-md from-[#16181d] from-80% to-[#646674] hover:to-[#646675]/50 font-semibold text-[#f5f5f5] flex flex-col gap-1 items-center justify-center;
   }
   .projects-card {
     @apply cursor-pointer w-64 relative flex-col items-center justify-center overflow-hidden rounded-xl shadow-inner shadow-[#111111];
   }
   .projects-card h3 {
-    @apply text-lg flex flex-row items-center justify-between gap-1.5 w-full bg-[#111111] bottom-0 left-0 py-1.5 pl-2 pr-1 text-white text-start font-semibold truncate;
+    @apply text-lg flex flex-row items-center justify-between gap-1.5 w-full bg-[#111111] bottom-0 left-0 py-1.5 pl-2 pr-1 text-[#f5f5f5] text-start font-semibold truncate;
   }
   .projects-card h3 span {
     @apply flex flex-row items-center justify-center gap-1 w-fit text-xs font-semibold text-center rounded-bl drop-shadow;
   }
   .projects-card h3 span a {
-    @apply p-0.5 text-white rounded-full text-2xl aspect-square hover:scale-110 active:opacity-75 transition-all md:duration-200 ease-in;
+    @apply p-0.5 text-[#f5f5f5] rounded-full text-2xl aspect-square hover:scale-110 active:opacity-75 transition-all md:duration-200 ease-in;
   }
   .projects-card p {
-    @apply absolute opacity-100 bottom-0 md:opacity-0 transition-all ease-in md:duration-200 pt-1 pb-2 px-2 w-fit font-normal text-xs bg-[#111111]/65 text-white drop-shadow text-justify;
+    @apply absolute opacity-100 bottom-0 md:opacity-0 transition-all ease-in md:duration-200 pt-1 pb-2 px-2 w-fit font-normal text-xs bg-[#111111]/65 text-[#f5f5f5] drop-shadow text-justify;
   }
   .projects-card img {
-    @apply aspect-square w-64 h-64 border-2 border-[#111111] bg-white rounded-b-xl select-none;
+    @apply aspect-square w-64 h-64 border-2 border-[#111111] bg-[#f5f5f5] rounded-b-xl select-none;
   }
   .back-to-top-btn {
-    @apply font-semibold text-base py-[0.3rem] px-4 text-center bg-white/5 text-[#fdfdff]/95 hover:bg-[#16181d]/95 active:bg-white/5 active:scale-95 border-[1.5px] border-current shadow w-fit rounded-md transition;
+    @apply font-semibold text-base py-[0.3rem] px-4 text-center bg-[#f5f5f5]/5 text-[#fdfdff]/95 hover:bg-[#16181d]/95 active:bg-[#f5f5f5]/5 active:scale-95 border-[1.5px] border-current shadow w-fit rounded-md transition;
   }
   .feedback-tab-btn {
-    @apply py-1 md:py-[0.3rem] px-4 font-semibold rounded bg-white/5 text-[#fdfdff] hover:bg-[#16181d] border-[1.5px] active:scale-95 border-[#fdfdff] active:bg-white/5 disabled:opacity-50 min-w-[50%] transition-all ease-in md:duration-200;
+    @apply py-1 md:py-[0.3rem] px-4 font-semibold rounded bg-[#f5f5f5]/5 text-[#fdfdff] hover:bg-[#16181d] border-[1.5px] active:scale-95 border-[#fdfdff] active:bg-[#f5f5f5]/5 disabled:opacity-50 min-w-[50%] transition-all ease-in md:duration-200;
   }
   .feedback-tab-input {
     @apply py-1.5 px-2 text-[#16181d] focus:outline-sky-500 invalid:focus:outline-sky-500 valid:focus:outline-green-500 out-of-range:focus:outline-red-500 rounded;
@@ -276,6 +276,6 @@
 }
 
 .active {
-  background-color: white;
+  background-color: [#f5f5f5];
   color: #16181d;
 }
