--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
 
 @layer components {
   .nav-link-n {
-    @apply px-3 pt-1.5 pb-0.5 md:px-3 md:pt-2.5 md:pb-2 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] hover:bg-[#f5f5f5] hover:text-[#16181d] select-none;
+    @apply px-2.5 pt-1 md:px-2.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-current select-none;
   }
   .nav-link-w {
-    @apply px-1.5 pt-1.5 pb-0.5 md:px-2 md:pt-2.5 md:pb-2 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] hover:bg-[#f5f5f5] hover:text-[#16181d] select-none;
+    @apply px-1 pt-1 md:px-1.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition-all md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-current select-none;
   }
   .nav-link-span {
     @apply text-xs md:text-base;
@@ -16,10 +16,10 @@
     @apply px-4 rounded py-0.5 font-semibold bg-[#f5f5f5]/[0.035] hover:bg-[#f0f0f2] hover:text-[#16181d] active:text-[#16181d] active:bg-[#f0f0f2]/75 text-[#f0f0f2] transition-all overflow-hidden;
   }
   header {
-    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111];
+    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111] border-b;
   }
   nav {
-    @apply px-2 pt-1.5 md:px-2.5 md:pt-1 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5];
+    @apply px-2 py-2.5 md:px-2.5 md:py-2.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5];
   }
   .nav-link-icon {
     @apply text-2xl md:text-[1.35rem];
