--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,21 @@
   button {
     user-select: none;
   }
+  /* Scrollbar styling */
+  body::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    border-radius: 0.25rem;
+    background: linear-gradient(to bottom, #16181d, #646674, #16181d);
+  }
+
+  body::-webkit-scrollbar-track {
+    background-color: #16181d;
+    border-radius: 0.25rem;
+  }
 
   /*Start Ratings*/
   :root {
