style: form component

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,13 @@
   textarea {
     @apply py-1.5 px-2 text-[#16181d] focus:outline-sky-500 invalid:focus:outline-sky-500 valid:focus:outline-green-500 out-of-range:focus:outline-red-500 rounded w-full;
   }
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    @apply bg-[#f5f5f5];
+  }
+
   input[type="radio"] {
     @apply cursor-pointer;
   }
