--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,14 @@
   .nav-link-span {
     @apply text-xs md:text-base;
   }
-  .header-promo-close-btn {
-    @apply px-4 rounded py-0.5 font-semibold bg-[#f5f5f5]/[0.035] hover:bg-[#f0f0f2] hover:text-[#16181d] active:text-[#16181d] active:bg-[#f0f0f2]/75 text-[#f0f0f2] transition overflow-hidden;
+  .header-promo-btn {
+    @apply p-2 rounded-full font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border border-transparent hover:border-[#f5f5f5] select-none shadow;
   }
   header {
     @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/90 backdrop-blur-sm border-b shadow;
   }
   nav {
-    @apply px-2 py-2 md:px-2.5 md:py-2.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5];
+    @apply px-2 py-1 md:px-2.5 md:py-1.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5];
   }
   .nav-link-icon {
     @apply text-2xl md:text-[1.35rem];
