--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,10 @@
     @apply p-2 rounded-full font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border border-transparent hover:border-[#f5f5f5] select-none shadow;
   }
   header {
-    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/90 backdrop-blur-sm border-b shadow;
+    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/90 backdrop-blur-sm border-b shadow transition-all md:duration-200 ease-in;
   }
   nav {
-    @apply px-2 py-1 md:px-2.5 md:py-1.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5];
+    @apply px-2 py-1 md:px-2.5 md:py-1.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5] transition-all md:duration-200 ease-in;
   }
   .nav-link-icon {
     @apply text-2xl md:text-[1.35rem];
