--- a/src/index.css
+++ b/src/index.css
@@ -61,22 +61,31 @@
     @apply cursor-pointer p-4 bg-gradient-to-t rounded-xl from-[#16181d] from-50% to-[#646674]/25 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2;
   }
   .projects-card {
-    @apply cursor-pointer w-64 relative flex-col items-center justify-center overflow-hidden rounded-xl shadow-inner shadow-[#111111];
+    @apply w-72 relative flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
   }
   .projects-card h3 {
-    @apply text-lg flex flex-row items-center justify-between gap-1.5 w-full bg-[#111111] bottom-0 left-0 py-1.5 pl-2 pr-1 text-[#f5f5f5] text-start font-semibold truncate;
+    @apply text-lg rounded-t-none flex flex-row items-center justify-between gap-1.5 w-full bottom-0 left-0 py-1.5 pl-2 pr-1 text-[#fdfdff] text-start font-semibold truncate border-b border-[#fdfdff80];
   }
   .projects-card h3 span {
     @apply flex flex-row items-center justify-center gap-1 w-fit text-xs font-semibold text-center rounded-bl drop-shadow;
   }
   .projects-card h3 span a {
-    @apply p-0.5 text-[#f5f5f5] rounded-full text-2xl aspect-square hover:scale-110 active:opacity-75 transition md:duration-200 ease-in;
+    @apply p-0.5 rounded-full text-2xl aspect-square hover:scale-110 active:opacity-75 transition md:duration-200 ease-in;
   }
   .projects-card p {
-    @apply absolute opacity-100 bottom-0 md:opacity-0 transition ease-in md:duration-200 pt-1 pb-2 px-2 w-fit font-normal text-xs bg-[#111111]/65 text-[#f5f5f5] drop-shadow text-justify;
+    @apply px-2 pb-4 ffcicjc font-normal text-xs text-[#f5f5f5] drop-shadow text-justify w-full;
+  }
+  .projects-card p em {
+    @apply px-1 pt-3 pb-1 w-full text-start flex items-center justify-between;
+  }
+  .projects-card p span {
+    @apply p-1 flex flex-wrap items-center justify-center gap-x-2.5;
+  }
+  .projects-card figure {
+    @apply py-4 w-full ficjc bg-[#fdfdff];
   }
   .projects-card img {
-    @apply aspect-square w-64 h-64 border-2 border-[#111111] bg-[#f5f5f5] rounded-b-xl select-none;
+    @apply aspect-square h-32 z-[4];
   }
   .back-to-top-btn {
     @apply font-semibold text-base py-[0.3rem] px-4 text-center bg-[#f5f5f5]/5 text-[#fdfdff]/95 hover:bg-[#16181d]/95 active:bg-[#f5f5f5]/5 active:scale-95 border-[1.5px] border-current shadow w-fit rounded-md transition;
@@ -92,6 +101,9 @@
   }
   .animate-reverse-spin {
     animation: reverse-spin 1s linear infinite;
+  }
+  .ffcicjc {
+    @apply flex flex-col items-center justify-center;
   }
   .ficjc {
     @apply flex items-center justify-center;
