--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@
     @apply cursor-pointer p-4 bg-gradient-to-t rounded-xl from-[#16181d] from-50% to-[#646674]/25 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2;
   }
   .projects-card {
-    @apply w-72 relative flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
+    @apply w-72 cursor-pointer flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
   }
   .projects-card h3 {
     @apply text-lg rounded-t-none flex flex-row items-center justify-between gap-1.5 w-full bottom-0 left-0 py-1.5 pl-2 pr-1 text-[#fdfdff] text-start font-semibold truncate border-b border-[#fdfdff80];
