--- a/src/index.css
+++ b/src/index.css
@@ -137,17 +137,18 @@
     }
   }
   button[type="submit"] {
-    @apply select-none disabled:opacity-75;
+    @apply disabled:opacity-75;
   }
   form:not([name="Ratings"]) input:not([type="radio"]),
   textarea {
-    @apply disabled:text-[#16181d] disabled:bg-opacity-95 bg-[#fdfdff] transition md:duration-200 ease-in;
+    @apply read-only:text-[#16181d] read-only:bg-opacity-95 bg-[#fdfdff] transition md:duration-200 ease-in;
   }
 
   form[name="Contact"] bdo {
     @apply after:content-['*'] after:ml-0.5 after:text-[#fdfdff];
   }
-  img {
+  img,
+  button {
     @apply select-none;
   }
   /* Scrollbar styling */
