--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
     @apply font-semibold text-base py-2 px-4 text-center bg-[#f5f5f5]/5 rounded-b-md;
   }
   .footer-link-card {
-    @apply flex flex-col items-start justify-center bg-gradient-to-t from-[#16181d] from-50% to-[#646674]/15 text-[#fdfdff] rounded-md w-full shadow-xl shadow-[#16181d];
+    @apply flex flex-col items-start justify-center bg-gradient-to-b from-[#16181d] from-50% to-[#646674]/15 text-[#fdfdff] rounded-md w-full shadow-xl shadow-[#16181d];
   }
   .footer-link-card ul {
     @apply p-2 md:px-4 flex flex-col gap-0.5;
@@ -40,13 +40,13 @@
     @apply font-semibold text-base py-2 px-4 text-center bg-[#f5f5f5]/5 w-full rounded-t-md mb-2.5 border-b border-[#fdfdff80];
   }
   .about-details-card h3 {
-    @apply font-semibold text-lg text-center;
+    @apply font-semibold text-lg text-center border-b border-[#fdfdff80] w-full pb-2;
   }
   .about-details-card ul {
-    @apply w-full list-disc px-2 md:px-4 text-justify text-[#f5f5f5]/75 drop-shadow shadow-[#111111] flex flex-col gap-y-1;
+    @apply w-full list-disc text-justify text-[#f5f5f5]/75 drop-shadow shadow-[#111111] flex flex-col gap-y-1;
   }
   .about-details-card ul li {
-    @apply transition md:duration-200 ease-in hover:text-[#f5f5f5];
+    @apply transition md:duration-200 ease-in hover:text-[#f5f5f5] truncate before:content-["🟉"] before:opacity-75 before:mr-1.5;
   }
   .social-link-item {
     @apply p-2.5 md:p-4 bg-[#f5f5f5] rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-100 transition md:duration-200 ease-in;
@@ -58,7 +58,7 @@
     @apply cursor-pointer p-2 md:p-4 rounded bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] font-semibold text-[#f5f5f5] flex flex-col gap-1 md:gap-2 items-center justify-center;
   }
   .about-details-card {
-    @apply cursor-pointer p-4 bg-gradient-to-t rounded-xl from-[#16181d] from-50% to-[#646674]/25 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2;
+    @apply cursor-pointer p-4 bg-gradient-to-b rounded-xl from-[#16181d] from-50% to-[#646674]/25 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2;
   }
   .projects-card {
     @apply w-72 cursor-pointer flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
