--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     @apply p-2 rounded-full font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm active:bg-[#f5f5f5]/75 active:text-[#16181d] border md:border border-transparent hover:border-[#f5f5f5] select-none shadow active:rotate-[360deg] transition md:duration-200 ease-in;
   }
   header {
-    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/90 backdrop-blur-sm border-b shadow transition-all md:duration-200 ease-in;
+    @apply flex flex-col items-center justify-center sticky top-0 z-20 bg-[#111111]/90 backdrop-blur-sm border-b border-[#fdfdff]/75 shadow transition-all md:duration-200 ease-in;
   }
   nav {
     @apply px-2 py-1 md:px-2.5 md:py-1.5 flex items-center justify-between max-w-7xl w-full text-[#f5f5f5] transition-all md:duration-200 ease-in;
