--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
 
 @layer components {
   .nav-link-n {
-    @apply px-2.5 pt-1 md:px-2.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff80] select-none shadow;
+    @apply px-2.5 pt-1 md:px-2.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff]/75 select-none shadow;
   }
   .nav-link-w {
-    @apply px-1 pt-1 md:px-1.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff80] select-none shadow;
+    @apply px-1 pt-1 md:px-1.5 md:pt-2 md:pb-1.5 flex flex-col md:flex-row md:gap-1.5 items-center justify-center rounded-t-xl font-semibold bg-[#f5f5f5]/[0.075] backdrop-blur-sm transition md:duration-200 ease-in active:bg-[#f5f5f5]/85 active:text-[#16181d] border md:border-2 border-transparent hover:border-[#fdfdff]/75 select-none shadow;
   }
   .nav-link-span {
     @apply text-xs md:text-base;
