--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@
     @apply cursor-pointer p-4 bg-gradient-to-b rounded-xl from-[#16181d] from-50% to-[#646674]/10 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2 border-[#fdfdff]/70;
   }
   .projects-card {
-    @apply w-72 cursor-pointer flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
+    @apply w-72 flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
   }
   .projects-card h3 {
     @apply text-lg rounded-t-none flex flex-row items-center justify-between gap-1.5 w-full bottom-0 left-0 py-1.5 pl-2 pr-1 text-[#fdfdff] text-start font-semibold truncate border-b border-[#fdfdff80];
@@ -82,7 +82,7 @@
     @apply p-1 flex flex-wrap items-center justify-center gap-x-2.5;
   }
   .projects-card figure {
-    @apply py-4 w-full ficjc bg-[#fdfdff];
+    @apply py-4 w-full ficjc bg-[#fdfdff] cursor-pointer;
   }
   .projects-card img {
     @apply aspect-square h-32 z-[4];
