--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@
     @apply cursor-pointer aspect-square p-2 md:p-4 pb-1 md:pb-2 rounded md:rounded-md bg-gradient-to-tl hover:bg-gradient-to-br from-[#16181d] from-70% to-[#646674] hover:to-[#64667480] font-semibold text-[#f5f5f5] flex flex-col gap-0.5 md:gap-2 items-center justify-center shadow shadow-[#16181d] md:hover:-translate-y-4 transition-all md:duration-200 ease-in;
   }
   .about-details-card {
-    @apply cursor-pointer p-4 bg-gradient-to-b rounded-xl from-[#16181d] from-50% to-[#646674]/10 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2 border-[#fdfdff]/70;
+    @apply cursor-pointer p-4 bg-gradient-to-b rounded-xl from-[#16181d] from-50% to-[#646674]/10 font-semibold text-[#f5f5f5] flex flex-col gap-4 md:gap-6 items-center justify-center border-t-2 border-[#fdfdff]/70 shadow shadow-[#16181d];
   }
   .projects-card {
     @apply w-72 flex flex-col items-center justify-center rounded-xl overflow-hidden bg-[#111111];
