--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
     @apply w-full list-disc text-justify text-[#f5f5f5]/75 drop-shadow shadow-[#111111] flex flex-col gap-y-1;
   }
   .about-details-card ul li {
-    @apply transition md:duration-200 ease-in hover:text-[#f5f5f5] truncate before:content-["🟉"] before:opacity-75 before:mr-1.5;
+    @apply transition md:duration-200 ease-in hover:text-[#f5f5f5] truncate before:content-["\2605"] before:opacity-75 hover:before:opacity-100 before:mr-1.5;
   }
   .social-link-item {
     @apply p-2.5 md:p-4 bg-[#f5f5f5] rounded-full hover:text-[#fdfdff] hover:scale-110 active:scale-100 transition md:duration-200 ease-in;
